# CPP-Call-Tensorflow

./: CMakeLists.txt  makefile  prediction.cpp  readme.md  vgg_model.py
little_demo/: add  add.cpp  evaluate.py  makefile
