CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(c_call_python)

SET(EXECUTABLE classifier)
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -Wall -O3")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})

FILE(GLOB SRC_FILES prediction.cpp)

ADD_EXECUTABLE(${EXECUTABLE}  ${SRC_FILES})

FIND_PACKAGE(PythonInterp 3.5 REQUIRED)
FIND_PACKAGE(PythonLibs 3.5 REQUIRED)
MESSAGE(STATUS "PYTHON_LIBRARIES = ${PYTHON_LIBRARIES}")
MESSAGE(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")

SET(PROJECT_LIBRARIES ${PYTHON_LIBRARIES} )
SET(PROJECT_INCLUDES ${PYTHON_INCLUDE_DIRS} )

MESSAGE(Project_include_path: ${PROJECT_INCLUDES})
MESSAGE(Project_libraries_path: ${PROJECT_LIBRARIES})
INCLUDE_DIRECTORIES(${PROJECT_INCLUDES})
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${PROJECT_LIBRARIES})

